# lfdiff

./: Makefile.am  README  TODO  configure.ac  lfdiff  lfdiff.man  lfdiff.pl  splitdiff
src/: Makefile.am  difflist.c  difflist.h  diffmanager.c  diffmanager.h  lfdiff.c
src/ansic/: Makefile  difflist.c  difflist.h  diffmanager.c  diffmanager.h  lfdiff.c
tests/: Makefile.am  check_lfdiff.c
